--- a/prologin/users/templates/users/profile.html
+++ b/prologin/users/templates/users/profile.html
@@ -65,7 +65,7 @@
         {% if team_memberships %}
           <h3>{% trans "Staff roles" %}</h3>
           {% for membership in team_memberships|dictsortreversed:'year' %}
-            <a href="{% url 'team:year' membership.year %}#m{{ shown_user.pk }}" class="btn btn-default staff-flair-{{ membership.role.name|slugify }}">{% blocktrans with year=membership.year role=membership.role %}{{ year }} ⋅ {{ role }}{% endblocktrans %}</a>
+            <a href="{% url 'team:year' membership.year %}#m{{ shown_user.pk }}" class="btn btn-default staff-flair-{{ membership.role.name|slugify }}">{% blocktrans with year=membership.year role=membership.role_name %}{{ year }} ⋅ {{ role }}{% endblocktrans %}</a>
           {% endfor %}
         {% endif %}
       {% endwith %}
