archives: handle ties in scoreboards (HallOfFame); fix #74

--- a/prologin/archives/templates/archives/chunk-scoreboard.html
+++ b/prologin/archives/templates/archives/chunk-scoreboard.html
@@ -1,1 +1,1 @@
-<li>{{ person.name }} {% if person.extra %}<small class="text-muted">({{ person.extra }})</small>{% endif %}</li>
+<li data-rank="{{ person.rank }}">{{ person.name }} {% if person.extra %}<small class="text-muted">({{ person.extra }})</small>{% endif %}</li>
