--- a/prologin/archives/templates/archives/inline-scoreboard.html
+++ b/prologin/archives/templates/archives/inline-scoreboard.html
@@ -1,3 +1,3 @@
-<ol start="{{ scoreboard_start }}">{% for person in scoreboard %}
+<ol class="ranked-enumeration">{% for person in scoreboard %}
   {% include "archives/chunk-scoreboard.html" %}
 {% endfor %}</ol>
