homepage: fix link CSS; add train button on post-final qualif block

--- a/prologin/homepage/static/css/homepage.css
+++ b/prologin/homepage/static/css/homepage.css
@@ -139,6 +139,11 @@
   min-height: 6em;
 }
 
+.home-jumbo .tl-block .desc a:not(.btn) {
+  color: inherit;
+  text-decoration: underline;
+}
+
 .home-jumbo .tl-block .desc .btn {
   font-size: inherit;
 }
