homepage: semifinals: fix date baloon link appearance

--- a/prologin/homepage/static/css/homepage.css
+++ b/prologin/homepage/static/css/homepage.css
@@ -205,3 +205,8 @@
   vertical-align: middle;
   padding-right: 0.3em;
 }
+
+.semifinal-dates {
+  cursor: pointer;
+  text-decoration: none !important;
+}
