--- a/prologin/archives/templates/archives/inline-scoreboard.html
+++ b/prologin/archives/templates/archives/inline-scoreboard.html
@@ -1,3 +1,25 @@
-<ol class="ranked-enumeration">{% for person in scoreboard %}
-  {% include "archives/chunk-scoreboard.html" %}
-{% endfor %}</ol>
+{% load i18n %}{% spaceless %}
+<table class="table table-striped">
+  <thead>
+  <tr>
+    <th></th>
+    <th>{% trans "Rank" %}</th>
+    <th width="100%">{% trans "Contestant" %}</th>
+    <th></th>
+  </tr>
+  </thead>
+  <tbody>
+  {% for item in scoreboard %}
+    <tr>
+      <td class="text-center">
+        <span class="challenge-trophy-{{ item.rank }}"><i class="fa fa-fw {% if item.rank <= 3 %}fa-trophy{% endif %}"></i></span>
+      </td>
+      <td style="white-space: nowrap;"><strong>{{ item.rank }}</strong>
+        {% if item.ex_aequo %}
+          <small> {% trans "(ex-aequo)" %}</small>{% endif %}</td>
+      <td>{{ item.item.name }}</td>
+      <td>{{ item.item.extra|default:'' }}</td>
+    </tr>
+  {% endfor %}
+  </tbody>
+</table>{% endspaceless %}
