--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -828,6 +828,46 @@ input[type=checkbox].task-list-item-checkbox {
   z-index: 1; /* because typehead appears after */
 }
 
+.panel.panel-form {
+  margin-bottom: 0;
+}
+
+.panel.panel-form p:last-of-type {
+  margin: 0;
+}
+
+.btn-file-input {
+  position: relative;
+  cursor: pointer;
+}
+
+.btn-file-input > label {
+  cursor: pointer;
+  white-space: nowrap;
+  position: static;
+  font-weight: normal;
+  display: inline;
+  margin: 0;
+  padding: 0;
+  max-width: none;
+}
+
+.btn-file-input > label > input {
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  bottom: -1px;
+  right: -1px;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  opacity: 0.0001;
+}
+
+label[for$="clear_id"] {
+  font-weight: normal;
+}
+
 /**
  * django-hijack
  */
