minor misc. fixes

--- a/prologin/centers/templates/centers/map.html
+++ b/prologin/centers/templates/centers/map.html
@@ -86,7 +86,7 @@
             </td>
             <td>
               <a href="#center-{{ forloop.counter0 }}"
-                 onclick="javascript:google.maps.event.trigger(center_markers[{{ forloop.counter0 }}], 'click');">
+                 onclick="google.maps.event.trigger(center_markers[{{ forloop.counter0 }}], 'click');">
                 <i class="fa fa-map-marker"></i> {% trans "Show" %}</a>
             </td>
             {% localize off %}
