documents: improve organizers badges and meal tickets

--- a/prologin/documents/templates/documents/index.html
+++ b/prologin/documents/templates/documents/index.html
@@ -1,6 +1,7 @@
 {% extends "prologin/base.html" %}
 {% load i18n %}
 {% load django_bootstrap_breadcrumbs %}
+{% load bootstrap %}
 
 {% block breadcrumbs %}
   {{ block.super }}
@@ -121,7 +122,7 @@
                 <i class="fa fa-calendar"></i> {% trans "Planning" %}
               </a>
               <a href="{% url 'documents:final:external-organizers' year %}" class="btn btn-default btn-xs">
-                    <i class="fa fa-hand-paper-o"></i> {% trans "External organizers" %}
+                <i class="fa fa-hand-paper-o"></i> {% trans "External organizers" %}
               </a>
               <a href="{% url 'documents:final:diplomas' year %}" class="btn btn-default btn-xs">
                 <i class="fa fa-trophy"></i> {% trans "Diplomas" %}
@@ -129,11 +130,8 @@
               <a href="{% url 'documents:final:badges' year %}" class="btn btn-default btn-xs">
                 <i class="fa fa-ticket"></i> {% trans "Badges" %}
               </a>
-              <a href="{% url 'documents:final:badges-organizers' year %}" class="btn btn-default btn-xs">
-                <i class="fa fa-ticket"></i> {% trans "Bagdes Organisateurs" %}
-              </a>
-              <a href="{% url 'documents:final:ticket-repas-input' year %}" class="btn btn-default btn-xs">
-                <i class="fa fa-cutlery"></i> {% trans "Ticket Repas" %}
+              <a href="{% url 'documents:final:badges-organizers-input' year %}" class="btn btn-default btn-xs">
+                <i class="fa fa-ticket"></i> {% trans "Organizers Bagdes" %}
               </a>
             </td>
           </tr>
@@ -160,6 +158,17 @@
               </a>
             </td>
           </tr>
+          </tr>
+            <td>
+              <strong>{% trans "Meal tickets" %}</strong>
+            </td>
+            <td>
+              <form class="form-inline" action="{% url 'documents:final:meal-tickets-input' year %}" method="post">
+                {% csrf_token %}
+                {{ form|bootstrap }}
+                <input type="submit" value="{% trans "Submit" %}" class="btn btn-default btn-s"/>
+              </form>
+            </td>
         </tbody>
       </table>
 
