--- a/prologin/documents/templates/documents/organizers-badges-input.html
+++ b/prologin/documents/templates/documents/organizers-badges-input.html
@@ -17,7 +17,7 @@
 {% block content %}
 
   <h1>
-    {% blocktrans %}Organizers Badges{% endblocktrans %}
+    {% trans "Organizer Badges" %}
   </h1>
   <form action="" method="post">
     {% csrf_token %}
