--- a/prologin/documents/templates/documents/organizers-badges-input.html
+++ b/prologin/documents/templates/documents/organizers-badges-input.html
@@ -22,7 +22,7 @@
   <form action="" method="post">
     {% csrf_token %}
     {{ form|bootstrap_horizontal }}
-    <input type="submit" value="{% trans "Submit" %}">
+    <input type="submit" value="{% trans "Submit" %}" class="btn btn-default btn-s">
   </form>
 {% endblock %}
       
