--- a/prologin/prologin/static/css/prologin.css
+++ b/prologin/prologin/static/css/prologin.css
@@ -466,6 +466,12 @@ li address {
   text-align: left;
 }
 
+.single-line {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
 .fa[data-indicator], .fa.fa-centered {
   width: 1em;
   text-align: center;
@@ -513,6 +519,11 @@ input[type=checkbox].task-list-item-checkbox {
 
 *:hover > a.headerlink {
   visibility: visible;
+}
+
+.heading-btn {
+  margin: 0;
+  padding-bottom: 10px;
 }
 
 .sponsor {
